fixed unalign issue

--- a/client/toy.css
+++ b/client/toy.css
@@ -7,9 +7,11 @@
 }
 
 .headerimagecontainer {
+	display: inline-block;
 	width: 500px;
 	height: 400px;
-	background-color: #c04e64;
+	background-color: red;
+	text-align: center;
 }
 
 .headerimage {
@@ -25,12 +27,13 @@
 }
 
 .comment {
+	background-color: red;
 	display: block;
 	position: relative;
 	border: 10px;
 	margin-top: 20px;
 	margin-bottom: 20px;
-  min-height: 200px;
+ 	min-height: 250px;
 }
 
 .commentpic {
@@ -54,10 +57,10 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 10px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	xpadding-top: 20px;
+	xpadding-bottom: 20px;
 	padding-left: 15px;
-	width: 355px;
+	max-width: 355px;
 	float:left;
 
 }
